# TGDates

./: .gitignore  README.md  host.py  package-lock.json  package.json  pyproject.toml  requirements.txt  robots.txt  webpack.config.js
.github/: FUNDING.yml
static/: datepick.js  datepicker.html  style.css
